--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ github_username:  jekyll
 
 # Build settings
 theme: minima
+remote_theme: thelehhman/plainwhite-jekyll
+
 plugins:
   - jekyll-feed
 
